--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Rohit Raj | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -24,17 +24,17 @@
       </ul>
     </nav>
     <section class="hero">
-  <div class="hero-content">
-    <div class="hero-image-container">
-      <img src="rohit.jpg" alt="Rohit Raj" class="hero-image" />
-    </div>
-    <div class="hero-text">
-      <h1>Hi, I'm <span>Rohit</span></h1>
-      <p>Crafting elegant solutions with code.</p>
-      <a href="https://github.com/rohitsr24?tab=repositories" class="btn" target="_blank">Explore Projects</a>
-    </div>
-  </div>
-</section>
+      <div class="hero-content">
+        <div class="hero-image-container">
+          <img src="rohit.jpg" alt="Rohit Raj" class="hero-image" />
+        </div>
+        <div class="hero-text">
+          <h1>Hi, I'm <span>Rohit</span></h1>
+          <p>Crafting elegant solutions with code.</p>
+          <a href="https://github.com/rohitsr24?tab=repositories" class="btn" target="_blank">Explore Projects</a>
+        </div>
+      </div>
+    </section>
 
 
   </header>
@@ -42,11 +42,7 @@
   <main>
     <section id="about" class="section">
       <h2>About Me</h2>
-      <p>Experienced Software Engineer at Wipro Limited with expertise in Java, Data Structures, Algorithms, and Web
-        Development. Known for delivering high-quality code, problem-solving, and strong collaborative skills.
-        Recognized for outperforming peers by clinching the Google India Challenge Scholarship in 2018, selected from
-        10K+ applicants. Eager to leverage skills in software development to drive impactful contributions in a dynamic
-        environment.</p>
+      <p id="about-text">Loading about section...</p>
     </section>
 
     <section id="projects" class="section">
@@ -100,14 +96,15 @@
     </section>
 
     <section id="contact" class="section">
-  <h2>Contact Details</h2>
-  <div class="contact-details">
-    <p><strong>Email:</strong> <a href="mailto:rohitraj9679@gmail.com">rohitraj9679@gmail.com</a></p>
-    <p><strong>Phone:</strong> <a href="tel:+919647718064">+919647718064</a></p>
-    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/rohitsr" target="_blank">linkedin.com/in/rohitsr</a></p>
-    <p><strong>GitHub:</strong> <a href="https://github.com/rohitsr24" target="_blank">github.com/rohitsr24</a></p>
-  </div>
-</section>
+      <h2>Contact Details</h2>
+      <div class="contact-details">
+        <p><strong>Email:</strong> <a href="mailto:rohitraj9679@gmail.com">rohitraj9679@gmail.com</a></p>
+        <p><strong>Phone:</strong> <a href="tel:+919647718064">+919647718064</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/rohitsr"
+            target="_blank">linkedin.com/in/rohitsr</a></p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/rohitsr24" target="_blank">github.com/rohitsr24</a></p>
+      </div>
+    </section>
 
   </main>
 
