--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Rohit<span>Raj</span></div>
+      <div class="logo">Rohit<span>Raj💻</span></div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
