--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
 
     <section id="resume" class="section">
       <h2>My Resume</h2>
-      <iframe src="resume_Rohit_Raj.pdf" width="100%" height="500px" style="border:1px solid #ccc;"></iframe>
-      <br />
+      <div class="responsive-iframe-container">
+        <iframe src="resume_Rohit_Raj.pdf" frameborder="0"></iframe>
+      </div>
     </section>
+
 
     <section id="contact" class="section">
       <h2>Contact Details</h2>
