improved UI comptible with all screen sizes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rohit Raj | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css" />
   <script src="script.js" defer></script>
 </head>
@@ -40,17 +42,15 @@
         </div>
       </div>
     </section>
-
-
   </header>
 
   <main>
-    <section id="about" class="section">
+    <section id="about" class="section animate-on-scroll">
       <h2>About Me</h2>
       <p id="about-text">Loading about section...</p>
     </section>
 
-    <section id="projects" class="section">
+    <section id="projects" class="section animate-on-scroll">
       <h2>Projects</h2>
       <div class="projects-slider-container">
         <button class="slider-btn left" aria-label="Scroll left">&lt;</button>
@@ -62,7 +62,7 @@
     </section>
 
 
-    <section id="profiles" class="section">
+    <section id="profiles" class="section animate-on-scroll">
       <h2>Profiles</h2>
       <!-- <div class="profiles-horizontal">
         <div class="profile-card">
@@ -78,7 +78,7 @@
 
 
 
-    <section id="skills" class="section">
+    <section id="skills" class="section animate-on-scroll">
       <h2>Skills</h2>
       <ul class="skills-list">
         <li>Java</li>
@@ -94,7 +94,7 @@
       </ul>
     </section>
 
-    <section id="resume" class="section">
+    <section id="resume" class="section animate-on-scroll">
       <h2>My Resume</h2>
       <div class="responsive-iframe-container">
         <iframe src="resume_Rohit_Raj.pdf" frameborder="0"></iframe>
@@ -102,14 +102,19 @@
     </section>
 
 
-    <section id="contact" class="section">
-      <h2>Contact Details</h2>
+    <section id="contact" class="contact-section animate-on-scroll">
+      <div class="section">
+      <h2>Contact Me</h2>
       <div class="contact-details">
-        <p><strong>Email:</strong> <a href="mailto:rohitraj9679@gmail.com">rohitraj9679@gmail.com</a></p>
-        <p><strong>Phone:</strong> <a href="tel:+919647718064">+919647718064</a></p>
-        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/rohitsr"
-            target="_blank">linkedin.com/in/rohitsr</a></p>
-        <p><strong>GitHub:</strong> <a href="https://github.com/rohitsr24" target="_blank">github.com/rohitsr24</a></p>
+        <p><i class="fas fa-envelope contact-icon"></i><strong>Email:</strong> <a
+            href="mailto:rohitraj9679@gmail.com">rohitraj9679@gmail.com</a></p>
+        <p><i class="fas fa-phone contact-icon"></i><strong>Phone:</strong> <a
+            href="tel:+919647718064">+919647718064</a></p>
+        <p><i class="fab fa-linkedin contact-icon"></i><strong>LinkedIn:</strong> <a
+            href="https://www.linkedin.com/in/rohitsr" target="_blank">linkedin.com/in/rohitsr</a></p>
+        <p><i class="fab fa-github contact-icon"></i><strong>GitHub:</strong> <a href="https://github.com/rohitsr24"
+            target="_blank">github.com/rohitsr24</a></p>
+      </div>
       </div>
     </section>
 
