updated profile links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="https://www.linkedin.com/in/rohitsr">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/rohitsr18">LinkedIn</a></li>
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -38,7 +38,7 @@
         <div class="hero-text">
           <h1>Hi, I'm <span>Rohit</span></h1>
           <p>Crafting elegant solutions with code.</p>
-          <a href="https://github.com/rohitsr24?tab=repositories" class="btn" target="_blank">Explore Projects</a>
+          <a href="https://github.com/rohitsr18?tab=repositories" class="btn" target="_blank">Explore Projects</a>
         </div>
       </div>
     </section>
@@ -67,7 +67,7 @@
       <!-- <div class="profiles-horizontal">
         <div class="profile-card">
           <h3>LinkedIn</h3>
-          <p><a href="https://www.linkedin.com/in/rohitsr" target="_blank">View Profile</a></p>
+          <p><a href="https://www.linkedin.com/in/rohitsr18" target="_blank">View Profile</a></p>
         </div> -->
       <div class="profile-card leetcode-card" id="leetcode-stats">
         <h3>LeetCode</h3>
@@ -111,9 +111,9 @@
         <p><i class="fas fa-phone contact-icon"></i><strong>Phone:</strong> <a
             href="tel:+919647718064">+919647718064</a></p>
         <p><i class="fab fa-linkedin contact-icon"></i><strong>LinkedIn:</strong> <a
-            href="https://www.linkedin.com/in/rohitsr" target="_blank">linkedin.com/in/rohitsr</a></p>
-        <p><i class="fab fa-github contact-icon"></i><strong>GitHub:</strong> <a href="https://github.com/rohitsr24"
-            target="_blank">github.com/rohitsr24</a></p>
+            href="https://www.linkedin.com/in/rohitsr18" target="_blank">linkedin.com/in/rohitsr18</a></p>
+        <p><i class="fab fa-github contact-icon"></i><strong>GitHub:</strong> <a href="https://github.com/rohitsr18"
+            target="_blank">github.com/rohitsr18</a></p>
       </div>
       </div>
     </section>
