optimized the code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="https://www.linkedin.com/in/rohitsr18">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/rohitsr18" target="_blank" rel="noopener">LinkedIn</a></li>
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -38,7 +38,7 @@
         <div class="hero-text">
           <h1>Hi, I'm <span>Rohit</span></h1>
           <p>Crafting elegant solutions with code.</p>
-          <a href="https://github.com/rohitsr18?tab=repositories" class="btn" target="_blank">Explore Projects</a>
+          <a href="https://github.com/rohitsr18?tab=repositories" class="btn" target="_blank" rel="noopener">Explore Projects</a>
         </div>
       </div>
     </section>
@@ -61,7 +61,6 @@
       </div>
     </section>
 
-
     <section id="profiles" class="section animate-on-scroll">
       <h2>Profiles</h2>
       <!-- <div class="profiles-horizontal">
@@ -75,8 +74,6 @@
       </div>
       </div>
     </section>
-
-
 
     <section id="skills" class="section animate-on-scroll">
       <h2>Skills</h2>
@@ -101,20 +98,29 @@
       </div>
     </section>
 
-
     <section id="contact" class="contact-section animate-on-scroll">
-      <div class="section">
       <h2>Contact Me</h2>
       <div class="contact-details">
-        <p><i class="fas fa-envelope contact-icon"></i><strong>Email:</strong> <a
-            href="mailto:rohitraj9679@gmail.com">rohitraj9679@gmail.com</a></p>
-        <p><i class="fas fa-phone contact-icon"></i><strong>Phone:</strong> <a
-            href="tel:+919647718064">+919647718064</a></p>
-        <p><i class="fab fa-linkedin contact-icon"></i><strong>LinkedIn:</strong> <a
-            href="https://www.linkedin.com/in/rohitsr18" target="_blank">linkedin.com/in/rohitsr18</a></p>
-        <p><i class="fab fa-github contact-icon"></i><strong>GitHub:</strong> <a href="https://github.com/rohitsr18"
-            target="_blank">github.com/rohitsr18</a></p>
-      </div>
+        <p>
+          <i class="fas fa-envelope contact-icon"></i>
+          <strong>Email:</strong>
+          <a href="mailto:rohitraj9679@gmail.com">rohitraj9679@gmail.com</a>
+        </p>
+        <p>
+          <i class="fas fa-phone contact-icon"></i>
+          <strong>Phone:</strong>
+          <a href="tel:+919647718064">+919647718064</a>
+        </p>
+        <p>
+          <i class="fab fa-linkedin contact-icon"></i>
+          <strong>LinkedIn:</strong>
+          <a href="https://www.linkedin.com/in/rohitsr18" target="_blank" rel="noopener">linkedin.com/in/rohitsr18</a>
+        </p>
+        <p>
+          <i class="fab fa-github contact-icon"></i>
+          <strong>GitHub:</strong>
+          <a href="https://github.com/rohitsr18" target="_blank" rel="noopener">github.com/rohitsr18</a>
+        </p>
       </div>
     </section>
 
@@ -125,5 +131,4 @@
   </footer>
 
 </body>
-
 </html>
