--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         <h3>LeetCode</h3>
         <p>Loading LeetCode stats...</p>
       </div>
-      </div>
     </section>
 
     <section id="skills" class="section animate-on-scroll">
@@ -94,7 +93,7 @@
     <section id="resume" class="section animate-on-scroll">
       <h2>My Resume</h2>
       <div class="responsive-iframe-container">
-        <iframe src="resume_Rohit_Raj.pdf" frameborder="0"></iframe>
+        <iframe src="https://drive.google.com/file/d/1UFiREAq66IoRyRG3D-KtuSOFnD2b7SKd/preview" allow="autoplay"></iframe>
       </div>
     </section>
 
@@ -123,12 +122,10 @@
         </p>
       </div>
     </section>
-
   </main>
 
   <footer>
     <p>© 2025 Rohit Raj | Built with 💻 and ☕</p>
   </footer>
-
 </body>
 </html>
