updated skills section

--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
         <li>Microservices</li>
         <li>Hibernate</li>
         <li>RESTful APIs</li>
-        <li>MySQL</li>
+        <li>PostgreSQL</li>
         <li>HTML5</li>
         <li>CSS3</li>
-        <li>CI/CD</li>
+        <li>Jenkins</li>
         <li>Git & GitHub</li>
+        <li>Confulence</li>
       </ul>
     </section>
 
