--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <li>CSS3</li>
         <li>Jenkins</li>
         <li>Git & GitHub</li>
-        <li>Confulence</li>
+        <li>Confluence</li>
       </ul>
     </section>
 
