--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
     <section id="resume" class="section animate-on-scroll">
       <h2>My Resume</h2>
       <div class="responsive-iframe-container">
-        <iframe src="https://drive.google.com/file/d/1UFiREAq66IoRyRG3D-KtuSOFnD2b7SKd/preview" allow="autoplay"></iframe>
+        <iframe 
+          src="https://drive.google.com/file/d/1UFiREAq66IoRyRG3D-KtuSOFnD2b7SKd/preview" 
+          allow="autoplay"
+          title="Resume"
+          loading="lazy"
+        ></iframe>
       </div>
     </section>
 
