--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
     <section id="skills" class="section animate-on-scroll">
       <h2>Skills</h2>
       <ul class="skills-list">
-        <li>Java</li>
-        <li>Spring Boot</li>
-        <li>Microservices</li>
-        <li>Hibernate</li>
-        <li>RESTful APIs</li>
-        <li>PostgreSQL</li>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>Jenkins</li>
-        <li>Git & GitHub</li>
-        <li>Confluence</li>
+        <li><i class="fab fa-java skill-icon" title="Java"></i> Java</li>
+        <li><i class="fas fa-leaf skill-icon" title="Spring Boot"></i> Spring Boot</li>
+        <li><i class="fas fa-cubes skill-icon" title="Microservices"></i> Microservices</li>
+        <li><i class="fas fa-database skill-icon" title="Hibernate"></i> Hibernate</li>
+        <li><i class="fas fa-plug skill-icon" title="RESTful APIs"></i> RESTful APIs</li>
+        <li><i class="fas fa-database skill-icon" title="PostgreSQL"></i> PostgreSQL</li>
+        <li><i class="fab fa-html5 skill-icon" title="HTML5"></i> HTML5</li>
+        <li><i class="fab fa-css3-alt skill-icon" title="CSS3"></i> CSS3</li>
+        <li><i class="fab fa-jenkins skill-icon" title="Jenkins"></i> Jenkins</li>
+        <li><i class="fab fa-git-alt skill-icon" title="Git & GitHub"></i> Git & GitHub</li>
+        <li><i class="fab fa-confluence skill-icon" title="Confluence"></i> Confluence</li>
       </ul>
     </section>
 
