--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="hero-text">
           <h1>Hi, I'm <span>Rohit</span></h1>
           <p>Crafting elegant solutions with code.</p>
-          <a href="https://github.com/rohitsr18?tab=repositories" class="btn" target="_blank" rel="noopener">Explore Projects</a>
+          <a href="https://github.com/rohitsr18?tab=repositories" class="btn-explore">Explore Project</a>
         </div>
       </div>
     </section>
