--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </div>
         <div class="hero-text">
           <h1>Hi, I'm <span>Rohit</span></h1>
-          <p>Crafting elegant solutions with code.</p>
-          <a href="https://github.com/rohitsr18?tab=repositories" class="btn-explore">Explore Project</a>
+          <p>Optimizing Ideas into Efficient, Scalable Solutions—One Algorithm at a Time.</p>
+          <a href="https://github.com/rohitsr18?tab=repositories" class="btn-explore">Explore Projects</a>
         </div>
       </div>
     </section>
