added codechef profile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rohit Raj</title>
-  <link rel="icon" href="https://em-content.zobj.net/source/microsoft-teams/337/man-technologist_1f468-200d-1f4bb.png" type="image/png" />
+  <link rel="icon" href="https://em-content.zobj.net/source/microsoft-teams/337/man-technologist_1f468-200d-1f4bb.png"
+    type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,7 +17,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-03BTCFK5G9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-03BTCFK5G9');
   </script>
@@ -73,14 +74,7 @@
 
     <section id="profiles" class="section animate-on-scroll">
       <h2>Profiles</h2>
-      <!-- <div class="profiles-horizontal">
-        <div class="profile-card">
-          <h3>LinkedIn</h3>
-          <p><a href="https://www.linkedin.com/in/rohitsr18" target="_blank">View Profile</a></p>
-        </div> -->
-      <div class="profile-card leetcode-card" id="leetcode-stats">
-        <h3>LeetCode</h3>
-        <p>Loading LeetCode stats...</p>
+      <div class="profiles-horizontal">
       </div>
     </section>
 
@@ -104,12 +98,8 @@
     <section id="resume" class="section animate-on-scroll">
       <h2>My Resume</h2>
       <div class="responsive-iframe-container">
-        <iframe 
-          src="https://drive.google.com/file/d/1UFiREAq66IoRyRG3D-KtuSOFnD2b7SKd/preview" 
-          allow="autoplay"
-          title="Resume"
-          loading="lazy"
-        ></iframe>
+        <iframe src="https://drive.google.com/file/d/1UFiREAq66IoRyRG3D-KtuSOFnD2b7SKd/preview" allow="autoplay"
+          title="Resume" loading="lazy"></iframe>
       </div>
     </section>
 
@@ -144,4 +134,5 @@
     <p>© 2025 Rohit Raj | Built with 💻 and ☕</p>
   </footer>
 </body>
+
 </html>
