--- a/index.html
+++ b/index.html
@@ -81,17 +81,20 @@
     <section id="skills" class="section animate-on-scroll">
       <h2>Skills</h2>
       <ul class="skills-list">
+        <li><i class="fab fa-python skill-icon" title="Python"></i> Python</li>
         <li><i class="fab fa-java skill-icon" title="Java"></i> Java</li>
-        <li><i class="fas fa-leaf skill-icon" title="Spring Boot"></i> Spring Boot</li>
-        <li><i class="fas fa-cubes skill-icon" title="Microservices"></i> Microservices</li>
-        <li><i class="fas fa-database skill-icon" title="Hibernate"></i> Hibernate</li>
-        <li><i class="fas fa-plug skill-icon" title="RESTful APIs"></i> RESTful APIs</li>
-        <li><i class="fas fa-database skill-icon" title="PostgreSQL"></i> PostgreSQL</li>
-        <li><i class="fab fa-html5 skill-icon" title="HTML5"></i> HTML5</li>
-        <li><i class="fab fa-css3-alt skill-icon" title="CSS3"></i> CSS3</li>
+        <li><i class="fas fa-project-diagram skill-icon" title="LangGraph"></i> LangGraph</li>
+        <li><i class="fas fa-link skill-icon" title="LangChain"></i> LangChain</li>
+        <li><i class="fas fa-robot skill-icon" title="Llama 3.2"></i> Llama 3.2</li>
+        <li><i class="fas fa-fire skill-icon" title="PyTorch"></i> PyTorch</li>
+        <li><img src="kubernetes.png" class="skill-icon" alt="Kubernetes" title="Kubernetes"> Kubernetes</li>
+        <li><i class="fab fa-docker skill-icon" title="Docker"></i> Docker</li>
+        <li><i class="fas fa-seedling skill-icon" title="Pinecone"></i> Pinecone</li>
+        <li><i class="fas fa-database skill-icon" title="Postgres"></i> Postgres</li>
+        <li><i class="fas fa-cloud skill-icon" title="AWS Bedrock / SageMaker"></i> AWS Bedrock / SageMaker</li>
+        <li><i class="fab fa-google skill-icon" title="Vertex AI"></i> Vertex AI</li>
         <li><i class="fab fa-jenkins skill-icon" title="Jenkins"></i> Jenkins</li>
-        <li><i class="fab fa-git-alt skill-icon" title="Git & GitHub"></i> Git & GitHub</li>
-        <li><i class="fab fa-confluence skill-icon" title="Confluence"></i> Confluence</li>
+        <li><i class="fab fa-github skill-icon" title="Git & GitHub"></i> Git & GitHub</li>
       </ul>
     </section>
 
