--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="hero-text">
           <h1>Hi, I'm <span>Rohit</span></h1>
-          <p>Optimizing Ideas into Efficient, Scalable Solutions—One Algorithm at a Time.</p>
+          <p>Optimizing Complex AI Workflows into Scalable, Production-Ready Solutions—One Agent at a Time.</p>
           <a href="https://github.com/rohitsr18?tab=repositories" class="btn-explore">Explore Projects</a>
         </div>
       </div>
